--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "grapheme>=0.6.0",
     "mss>=9.0.2",
     "websockets>=14.0",
+    "beautifulsoup4>=4.12.0",
 ]
 
 [project.urls]
